Bug 256181 - [Cocoa] Temporarily wake up remote process if outgoing IPC message queue becomes too large
Summary: [Cocoa] Temporarily wake up remote process if outgoing IPC message queue beco...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Fujii Hironori
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-01 14:52 PDT by Chris Dumez
Modified: 2023-05-02 00:15 PDT (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-05-01 14:52:22 PDT
Temporarily wake up remote process if outgoing IPC message queue becomes too large, to avoid potentially bad memory growth when the remote process is suspended.
Comment 1 Chris Dumez 2023-05-01 14:58:05 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13340
Comment 2 Radar WebKit Bug Importer 2023-05-01 16:46:36 PDT
<rdar://problem/108762548>
Comment 3 EWS 2023-05-01 19:14:21 PDT
Committed 263570@main (51833439139b): <https://commits.webkit.org/263570@main>

Reviewed commits have been landed. Closing PR #13340 and removing active labels.
Comment 4 Fujii Hironori 2023-05-02 00:06:59 PDT
Re-opening for pull request https://github.com/WebKit/WebKit/pull/13356
Comment 5 EWS 2023-05-02 00:15:51 PDT
Committed 263574@main (950330ee0ccb): <https://commits.webkit.org/263574@main>

Reviewed commits have been landed. Closing PR #13356 and removing active labels.